feat(ball): enhance paddle collision handling and power-up spawning
- Updated paddle collision detection to use logical paddle width for better accuracy.
- Added functionality to spawn power-ups upon brick destruction in both single-player and versus modes.
- Refactored ball attachment logic to ensure proper positioning on the paddle.